# django-jables

./: README.md  setup.cfg
jables/: apps.py  models.py
