[metadata]
name = django-jables
version = 1.0
description = A better base model for Django with sensible defaults.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/willywongi/django-jables
author = Willywongi
author_email = pongi@pongi.it
license = GPL-3.0-or-later
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    nanoid == 2.0.0
